--- a/MapboxAndroidDemo/src/main/res/layout/activity_info_window_symbol_layer.xml
+++ b/MapboxAndroidDemo/src/main/res/layout/activity_info_window_symbol_layer.xml
@@ -6,7 +6,7 @@
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="match_parent"
+        android:layout_width="2035253321"
         android:layout_height="match_parent"
         mapbox:mapbox_cameraTargetLat="42.149683"
         mapbox:mapbox_cameraTargetLng="-119.155770"
